// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<RecipeDetail /> Should correctly assign a class name 1`] = `
<div
  className="p2 bg-white classname-test"
>
  <h2
    className="h2"
  >
    Test recipe
  </h2>
  <img
    alt="Test recipe"
    className="fit"
  />
  <div>
    <span>
      Test category
    </span>
    <span />
  </div>
  <h3>
    Ingredients:
  </h3>
  <ul>
    <li>
      Ing 1
    </li>
    <li>
      Ing 2
    </li>
  </ul>
  <h3>
    Steps:
  </h3>
  <ol>
    <li>
      Step 1
    </li>
    <li>
      Step 2
    </li>
  </ol>
  <a
    href="/recipe/1"
    onClick={[Function]}
  >
    See more
  </a>
</div>
`;

exports[`<RecipeDetail /> Should not break if no recipe passed 1`] = `
<p
  className="h3 p2 bg-white italic center"
>
  Please select a recipe to see the detail!
</p>
`;

exports[`<RecipeDetail /> Should render correctly a recipe 1`] = `
<div
  className="p2 bg-white"
>
  <h2
    className="h2"
  >
    Test recipe
  </h2>
  <img
    alt="Test recipe"
    className="fit"
  />
  <div>
    <span>
      Test category
    </span>
    <span />
  </div>
  <h3>
    Ingredients:
  </h3>
  <ul>
    <li>
      Ing 1
    </li>
    <li>
      Ing 2
    </li>
  </ul>
  <h3>
    Steps:
  </h3>
  <ol>
    <li>
      Step 1
    </li>
    <li>
      Step 2
    </li>
  </ol>
  <a
    href="/recipe/1"
    onClick={[Function]}
  >
    See more
  </a>
</div>
`;

exports[`<RecipeDetail /> Should render recipe w/o ingredients 1`] = `
<div
  className="p2 bg-white"
>
  <h2
    className="h2"
  >
    Test recipe
  </h2>
  <img
    alt="Test recipe"
    className="fit"
  />
  <div>
    <span>
      Test category
    </span>
    <span />
  </div>
  <h3>
    Ingredients:
  </h3>
  <h3>
    Steps:
  </h3>
  <ol>
    <li>
      Step 1
    </li>
    <li>
      Step 2
    </li>
  </ol>
  <a
    href="/recipe/1"
    onClick={[Function]}
  >
    See more
  </a>
</div>
`;

exports[`<RecipeDetail /> Should render recipe w/o steps 1`] = `
<div
  className="p2 bg-white"
>
  <h2
    className="h2"
  >
    Test recipe
  </h2>
  <img
    alt="Test recipe"
    className="fit"
  />
  <div>
    <span>
      Test category
    </span>
    <span />
  </div>
  <h3>
    Ingredients:
  </h3>
  <ul>
    <li>
      Ing 1
    </li>
    <li>
      Ing 2
    </li>
  </ul>
  <h3>
    Steps:
  </h3>
  <a
    href="/recipe/1"
    onClick={[Function]}
  >
    See more
  </a>
</div>
`;
